tests/conformance/negative/bad_type_assign.afr
create x = 1
set x = "nope"
